@@ -31,13 +31,13 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 @FixMethodOrder(MethodSorters.NAME_ASCENDING)
 public class VisualizationTest extends ResourceCase {
 
-	final String TARGET_PDF_CII = "./target/testout-Visualization-cii.pdf";
-	final String TARGET_PDF_UBL = "./target/testout-Visualization-cii.pdf";
+	private static final String TARGET_PDF_CII = "./target/testout-Visualization-cii.pdf";
+	private static final String TARGET_PDF_UBL = "./target/testout-Visualization-cii.pdf";
 
 	public void testCIIVisualizationBasic() {
 		this.runZUGFeRDVisualization("factur-x.xml", "factur-x-vis.fr.html", Language.FR);
@@ -45,6 +45,37 @@ public class VisualizationTest extends ResourceCase {
 
 	public void testCIIVisualizationExtended() {
 		this.runZUGFeRDVisualization("factur-x-extended.xml", "factur-x-vis-extended.de.html", Language.DE);
+	}
+
+	public void testCIIVisualizationMultiplePaymentMeansBIC() {
+		File CIIinputFile = getResourceAsFile("multiple-payment-means.cii.xml");
+		String result = null;
+		try {
+			ZUGFeRDVisualizer zvi = new ZUGFeRDVisualizer();
+			result = zvi.visualize(CIIinputFile.getAbsolutePath(), Language.EN);
+		} catch (UnsupportedOperationException e) {
+			fail("UnsupportedOperationException should not happen: " + e.getMessage());
+		} catch (IllegalArgumentException e) {
+			fail("IllegalArgumentException should not happen: " + e.getMessage());
+		} catch (TransformerException e) {
+			fail("TransformerException should not happen: " + e.getMessage());
+		} catch (IOException e) {
+			fail("IOException should not happen: " + e.getMessage());
+		} catch (ParserConfigurationException e) {
+			fail("ParserConfigurationException should not happen: " + e.getMessage());
+		}
+
+		assertNotNull(result);
+		// regression for https://github.com/ZUGFeRD/mustangproject/issues/987:
+		// BICs from other payment means must not be concatenated onto this one
+		assertFalse(result.contains("COBADEFF760;HYVEDEMM419"));
+		assertFalse(result.contains("HYVEDEMM419;OBKLDEMXXXX"));
+		assertFalse(result.contains("OBKLDEMXXXX;SOLADEST600"));
+		// each BIC must still be present, paired with its own IBAN
+		assertTrue(result.contains("COBADEFF760"));
+		assertTrue(result.contains("HYVEDEMM419"));
+		assertTrue(result.contains("OBKLDEMXXXX"));
+		assertTrue(result.contains("SOLADEST600"));
 	}
 
 	public void testUBLCreditNoteVisualizationBasic() {
@@ -63,7 +94,7 @@ public class VisualizationTest extends ResourceCase {
 		try {
 			ZUGFeRDVisualizer zvi = new ZUGFeRDVisualizer();
 			result = zvi.visualize(CIIinputFile.getAbsolutePath(), lang);
-			Files.write(Paths.get("./target/testout-" + resultFileName), result.getBytes(StandardCharsets.UTF_8));
+			Files.write(Path.of("./target/testout-" + resultFileName), result.getBytes(StandardCharsets.UTF_8));
 
 			File expectedResult = getResourceAsFile(resultFileName);
 			expected = new String(Files.readAllBytes(expectedResult.toPath()), StandardCharsets.UTF_8)
@@ -80,7 +111,7 @@ public class VisualizationTest extends ResourceCase {
 		} catch (ParserConfigurationException e) {
 			fail("ParserConfigurationException should not happen: " + e.getMessage());
 		}
-		
+
 		assertNotNull(result);
         /* remove file endings so that tests can also pass after checking
 		   out from git with arbitrary options (which may include CSRF changes)
@@ -108,8 +139,8 @@ public class VisualizationTest extends ResourceCase {
 		}
 
 		try {
-			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
-			assertTrue(ByteArraySearcher.contains(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), "<rdf:li>de</rdf:li>".getBytes()));
+			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Path.of(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
+			assertTrue(ByteArraySearcher.contains(Files.readAllBytes(Path.of(TARGET_PDF_CII)), "<rdf:li>de</rdf:li>".getBytes()));
 		} catch (IOException e) {
 			fail("IOException should not occur");
 		}
@@ -128,8 +159,8 @@ public class VisualizationTest extends ResourceCase {
 		}
 
 		try {
-			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
-			assertTrue(ByteArraySearcher.contains(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), "<rdf:li>en</rdf:li>".getBytes()));
+			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Path.of(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
+			assertTrue(ByteArraySearcher.contains(Files.readAllBytes(Path.of(TARGET_PDF_CII)), "<rdf:li>en</rdf:li>".getBytes()));
 		} catch (IOException e) {
 			fail("IOException should not occur");
 		}
@@ -148,8 +179,8 @@ public class VisualizationTest extends ResourceCase {
 		}
 
 		try {
-			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
-			assertTrue(ByteArraySearcher.contains(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), "<rdf:li>fr</rdf:li>".getBytes()));
+			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Path.of(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
+			assertTrue(ByteArraySearcher.contains(Files.readAllBytes(Path.of(TARGET_PDF_CII)), "<rdf:li>fr</rdf:li>".getBytes()));
 		} catch (IOException e) {
 			fail("IOException should not occur");
 		}
@@ -160,10 +191,6 @@ public class VisualizationTest extends ResourceCase {
 		File UBLinputFile = getResourceAsFile("ubl/01.01a-INVOICE.ubl.xml");
 
 		// the writing part
-		String sourceFilename = "factur-x.xml";
-
-		String expected = null;
-		String result = null;
 		try {
 			ZUGFeRDVisualizer zvi = new ZUGFeRDVisualizer();
 			zvi.toPDF(UBLinputFile.getAbsolutePath(), TARGET_PDF_UBL);
@@ -175,7 +202,7 @@ public class VisualizationTest extends ResourceCase {
 
 
 		try {
-			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
+			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Path.of(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
 		} catch (IOException e) {
 			fail("IOException should not occur");
 		}
@@ -186,10 +213,6 @@ public class VisualizationTest extends ResourceCase {
 		File UBLinputFile = getResourceAsFile("ubl/UBL-CreditNote-2.1-Example.ubl.xml");
 
 		// the writing part
-		String sourceFilename = "factur-x.xml";
-
-		String expected = null;
-		String result = null;
 		try {
 			ZUGFeRDVisualizer zvi = new ZUGFeRDVisualizer();
 			zvi.toPDF(UBLinputFile.getAbsolutePath(), TARGET_PDF_UBL);
@@ -201,7 +224,7 @@ public class VisualizationTest extends ResourceCase {
 
 
 		try {
-			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Paths.get(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
+			assertTrue(ByteArraySearcher.startsWith(Files.readAllBytes(Path.of(TARGET_PDF_CII)), new byte[]{'%', 'P', 'D', 'F'}));
 		} catch (IOException e) {
 			fail("IOException should not occur");
 		}
